test/recursiveFunctionReturn11.slq
// args: --run

def foo(n:!â„•){
	def baz(n:!â„•){
		return bar(n)+baz(n sub 1); // error
	}
	return baz(n);
}

def bar(n:!â„•){
	if nâ‰ 0{ return foo(n sub 1)+1; }
	return 0:!ğ”¹;
}

def main()â‡’foo(10);
